<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundColor"
    android:gravity="center"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/text"
            android:id="@+id/YouHaveSaved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/you_have_saved"
            android:textSize="20sp" />

        <TextView
            android:textColor="@color/text"
            android:id="@+id/TotalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="@string/Figure_1"
            android:textSize="40sp" />

        <TextView
            android:textColor="@color/text"
            android:id="@+id/YouNeedToSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/you_need_to_save"
            android:textSize="20sp" />

        <TextView
            android:textColor="@color/text"
            android:id="@+id/AmountToAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/Figure_2"
            android:textSize="40sp" />

        <Button
            android:textColor="@color/text"
            android:id="@+id/updateButton"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:onClick="Update"
            android:text="@string/update"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</LinearLayout>