<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:layout_margin="10dp"
            android:id="@+id/DateDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:hint="@string/dd"
            android:inputType="date" />

        <EditText

            android:layout_margin="10dp"
            android:id="@+id/DateMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:hint="@string/mm"
            android:inputType="date" />

        <EditText

            android:layout_margin="10dp"
            android:id="@+id/DateYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:hint="@string/yyyy"
            android:inputType="date" />

    </LinearLayout>

</LinearLayout>